# Nexus

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-publish.yml
include/: lexer.h  parser.h  runtime.h  token.h  value.h
src/: lexer.cpp  main.cpp  parser.cpp  runtime.cpp  value.cpp
